--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
     <div class="weather">
       <main>
-        <h1 id="location">San Jose, CA</h1>
-        <p id="date">Friday April 25th, 2021</p>
-        <p id="temp">53°F / 64°F</p>
-        <p id="summary">Clear</p>
-        <img id="weather-img" src='img/cloudy.png' />
+        <h1 id="location">Results Shown Here</h1>
+        <p id="date">-------</p>
+        <p id="temp"></p>
+        <p id="summary"></p>
+        <img id="weather-img" src='' />
       </main>
     </div>
   </div>
